--- a/publications.html
+++ b/publications.html
@@ -62,7 +62,7 @@
               </ul>
             </div> <!-------------------------------------------------------------------------------------------->
              <div>
-              <h3><a href="http://doi.org/10.1109/JSTSP.2023.3267263 target="_blank" rel="noopener"">Multi-Task Explainable Quality Networks for Large-Scale Forensic Facial Recognition</a></h3>
+              <h3><a href="http://doi.org/10.1109/JSTSP.2023.3267263 target="_blank" rel="noopener"">Multi-task explainable quality networks for large-scale Forensic Facial Recognition</a></h3>
               <ul>
                 <li>Andrea Macarulla Rodriguez, Luis Unzueta, Zeno Geradts, Marcel Worring, Unai Elordi</li>
                 <li>IEEE Journal of Selected Topics in Signal Processing</li>
