fix links to publications

--- a/index.html
+++ b/index.html
@@ -53,17 +53,7 @@
             <h2>Latest News</h2>
             <hr>
             <ul>
-            <!-------------------------------------------------------------------------------------------->
-              <!-- 
-              <li>
-                <p class="text-small-margin">
-                  <span style="color: #1b7677;">[February 2023]</span>
-                  Yingjun published a paper <a href="https://arxiv.org/abs/2304.00101">"SuperDisco: Super-Class Discovery Improves
-Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
-                </p>
-              </li> 
-              -->
-             <!-------------------------------------------------------------------------------------------->
+
              <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[March 2023]</span>
@@ -154,16 +144,15 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
             <img src="img/people/eleni.jpg">
-            <!-- <a href = "https://yingjundu.github.io/" align="center"> -->
             <h3>Eleni Sergidou</h3> 
             <a>
             <div align="center">PhD student</div>
             <div>
-              <!-- <a href="https://scholar.google.com/citations?user=N1q5mfMAAAAJ&hl=en" >Scholar</a>
+              <!-- <a href="https://scholar.google.com/citations?user=..." >Scholar</a>
               &nbsp;|&nbsp; -->
               <a href="https://nl.linkedin.com/in/eksergidou" target="_blank" rel="noopener">LinkedIn</a>
                 &nbsp;<!-- |&nbsp;
-              <a href="https://github.com/YDU-uva">Github</a> -->
+              <a href="https://github.com/...">Github</a> -->
             </div>
             <div>&nbsp;</div>
           </div>
@@ -173,26 +162,25 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <h3>Meike Kombrink</h3>
             <div>PhD student</div>
             <div>
-             <!-- <a href="https://scholar.google.com/citations?user=ovqQIMUAAAAJ&hl">Scholar</a>
-             &nbsp;|&nbsp; -->
+             <a href="https://scholar.google.com/citations?user=pwd0TAEAAAAJ&hl=nl&oi=ao">Scholar</a>
+             &nbsp;|&nbsp;
               <a href="https://nl.linkedin.com/in/meike-kombrink" target="_blank" rel="noopener">LinkedIn</a>
               &nbsp; <!-- |&nbsp;
-              <a href="https://github.com/tjvsonsbeek">Github</a> -->
+              <a href="https://github.com/...">Github</a> -->
             </div>
             <div>&nbsp;</div>
           </div>
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
             <img src="img/people/conor.jpg">
-            <!-- <a href = "https://ivonajdenkoska.github.io/" align="center"> -->
             <h3>Conor McCarthy</h3>
             <div>PhD student</div>
             <div>
-              <!-- <a href="https://scholar.google.com/citations?user=2rFidrcAAAAJ&hl">Scholar</a>
+              <!-- <a href="https://scholar.google.com/...">Scholar</a>
               &nbsp;|&nbsp;
-              <a href="https://www.linkedin.com/in/ivona-najdenkoska/">LinkedIn</a>
+              <a href="https://www.linkedin.com/in/.../">LinkedIn</a>
               &nbsp;|&nbsp;
-              <a href="https://github.com/ivonajdenkoska">Github</a> -->
+              <a href="https://github.com/...">Github</a> -->
             </div> 
             <div>&nbsp;</div>
             <div>&nbsp;</div>
@@ -200,15 +188,14 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
               <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
             <img src="img/people/goncalo.jpg">
-            <!-- <a href = "https://zzzx1224.github.io/" align="center"> -->
             <h3>Gonçalo Marcelino</h3>
             <div>PhD student</div>
             <div>
              <a href="https://scholar.google.com/citations?hl=nl&user=QTRztlAAAAAJ" target="_blank" rel="noopener">Scholar</a>
               &nbsp;|&nbsp;
               <a href="https://www.linkedin.com/in/goncalobfm/" target="_blank" rel="noopener">LinkedIn</a>
-               &nbsp; <!-- |&nbsp;
-              <a href="https://github.com/zzzx1224">Github</a> -->
+               &nbsp; |&nbsp;
+              <a href="https://github.com/GoncaloBFM">Github</a>
             </div>
             <div>&nbsp;</div>
           </div>
@@ -264,7 +251,7 @@ Visual Recognition for the Long-Tail"</a> in the CVPR 2023.
             <div>
               <a href = "https://javierlloret.com/" target="_blank" rel="noopener"> Website</a>              
               &nbsp;<!--|&nbsp;
-              <a href="https://www.linkedin.com/in/marcel-worring/" target="_blank" rel="noopener">LinkedIn</a>-->
+              <a href="https://www.linkedin.com/in/.../" target="_blank" rel="noopener">LinkedIn</a>-->
             </div>
             <div>&nbsp;</div>
           </div> 
