--- a/publications.html
+++ b/publications.html
@@ -54,31 +54,19 @@
             <hr>
 <!-------------------------------------------------------------------------------------------->
             <div>
-              <h3><a href="https://doi.org/10.1016/j.specom.2023.03.010 target="_blank" rel="noopener"">Frequent-words analysis for forensic speaker comparison</a></h3>
+              <h3><a href="https://doi.org/10.1016/j.specom.2023.03.010" target="_blank" rel="noopener"">Frequent-words analysis for forensic speaker comparison</a></h3>
               <ul>
                 <li>Eleni-Konstantina Sergidou, Nelleke Scheijen, Jeannette Leegwater, Tina Cambier-Langeveld, Wauter Bosma </li>
                 <li> Speech Communication </li>
-                <!-- <li><a href="">Code</a></li> -->
               </ul>
             </div> <!-------------------------------------------------------------------------------------------->
              <div>
-              <h3><a href="http://doi.org/10.1109/JSTSP.2023.3267263 target="_blank" rel="noopener"">Multi-task explainable quality networks for large-scale Forensic Facial Recognition</a></h3>
+              <h3><a href="http://doi.org/10.1109/JSTSP.2023.3267263" target="_blank" rel="noopener"">Multi-task explainable quality networks for large-scale Forensic Facial Recognition</a></h3>
               <ul>
                 <li>Andrea Macarulla Rodriguez, Luis Unzueta, Zeno Geradts, Marcel Worring, Unai Elordi</li>
                 <li>IEEE Journal of Selected Topics in Signal Processing</li>
-                <!-- <li><a href="">Code</a></li> -->
               </ul>
             </div>
-            <!-------------------------------------------------------------------------------------------->
-            <!-- <div>
-              <h3><a href="https://openreview.net/pdf?id=3dnrKbeVatv target="_blank" rel="noopener"">Energy-Based Test Sample Adaptation for Domain Generalization</a></h3>
-              <ul>
-                <li>Zehao Xiao,  Xiantong Zhen, Shengcai Liao,  Cees Snoek</li>
-                <li>International Conference on Learning Representations (ICLR 2023)</li>
-                <li><a href="https://github.com/zzzx1224/EBTSA-ICLR2023">Code</a></li>
-              </ul>
-            </div> -->
-            <!-------------------------------------------------------------------------------------------->
           </div>
         </div>
         <!--End Publications 2023-->
@@ -89,28 +77,25 @@
             <hr>
 <!-------------------------------------------------------------------------------------------->
             <div>
-              <h3><a href="https://doi.org/10.1016/j.forsciint.2022.111239 target="_blank" rel="noopener"">Calibration of score based likelihood ratio estimation in automated forensic facial image comparison</a></h3>
+              <h3><a href="https://doi.org/10.1016/j.forsciint.2022.111239" target="_blank" rel="noopener"">Calibration of score based likelihood ratio estimation in automated forensic facial image comparison</a></h3>
               <ul>
                 <li>Andrea Macarulla Rodriguez, Zeno Geradts, Marcel Worring</li>
                 <li>Forensic Science International</li>
-                <!-- <li><a href="">Code</a></li> -->
               </ul>
             </div> <!-------------------------------------------------------------------------------------------->
             <div>
-              <h3><a href=" https://doi.org/10.1111/1556-4029.14324 target="_blank" rel="noopener"">Likelihood ratios for deep neural networks in face comparison</a></h3>
+              <h3><a href=" https://doi.org/10.1111/1556-4029.14324" target="_blank" rel="noopener"">Likelihood ratios for deep neural networks in face comparison</a></h3>
               <ul>
                 <li>Andrea Macarulla Rodriguez, Zeno Geradts, Marcel Worring</li>
                 <li>Journal of Forensic Sciences</li>
-                <!-- <li><a href="">Code</a></li> -->
               </ul>
             </div>
             <!-------------------------------------------------------------------------------------------->
             <div>
-              <h3><a href="https://doi.org/10.1080/20961790.2018.1509187 target="_blank" rel="noopener"">Google timeline accuracy assessment and error prediction</a></h3>
+              <h3><a href="https://doi.org/10.1080/20961790.2018.1509187" target="_blank" rel="noopener"">Google timeline accuracy assessment and error prediction</a></h3>
               <ul>
                 <li>Andrea Macarulla Rodriguez, Christian Tiberius, Roel van Bree, Zeno Geradts</li>
                 <li>Forensic Sciences Research</li>
-                <!-- <li><a href="https://github.com/mmderakhshani/lifelonger">Code</a></li> -->
               </ul>
             </div>         
             <!-------------------------------------------------------------------------------------------->
