--- a/publications.html
+++ b/publications.html
@@ -47,6 +47,21 @@
         <!--End Publications 20XX-->
         <!-------------------------------------------------------------------------------------------->
         <!-------------------------------------------------------------------------------------------->
+        <div class="flex-row">
+          <div class="flex-item flex-column publications">
+            <h2>Publications 2024</h2>
+            <hr>
+<!-------------------------------------------------------------------------------------------->
+            <div>
+              <h3><a href="https://doi.org/10.1177/14738716241238476" target="_blank" rel="noopener"">ProtoExplorer: Interpretable forensic analysis of deepfake videos using prototype exploration and refinement</a></h3>
+              <ul>
+                <li>Merel de Leeuw den Bouter, Javier Lloret Pardo, Zeno Geradts, Marcel Worring </li>
+                <li> Information Visualization </li>
+              </ul>
+            </div> <!-------------------------------------------------------------------------------------------->
+          </div>
+        </div>
+
                 <!--Start Publications 2023-->
         <div class="flex-row">
           <div class="flex-item flex-column publications">
