--- a/index.html
+++ b/index.html
@@ -53,7 +53,20 @@
             <h2>Latest News</h2>
             <hr>
             <ul>
-
+              <li>
+                <p class="text-small-margin">
+                  <span style="color: #1b7677;">[April 2024]</span>
+                  Merel and Javier published a paper in Information Visualization: <a href="https://doi.org/10.1177/14738716241238476" target="_blank" rel="noopener"">ProtoExplorer: Interpretable forensic analysis of deepfake videos using prototype exploration and refinement</a>.
+                </p>
+              </li>
+              <!-------------------------------------------------------------------------------------------->
+              <li>
+                <p class="text-small-margin">
+                  <span style="color: #1b7677;">[May 2023]</span>
+                  Eleni published a paper in Speech Communication: <a href="https://doi.org/10.1016/j.specom.2023.03.010" target="_blank" rel="noopener"">Frequent-words analysis for forensic speaker comparison</a>.
+                </p>
+              </li>
+              <!-------------------------------------------------------------------------------------------->
              <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[March 2023]</span>
