--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
               <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[February 2024]</span>
-                  Zeno was interviewed by Quest (in Dutch): <a href="https://www.quest.nl/tech/technologie/a46604991/afbeelding-video-vertrouwen-deepfakes/" target="_blank" rel="noopener"">Kunnen we nog wel iets vertrouwen, nu elke video of afbeelding een deepfake kan zijn?</a>.
+                  Zeno was interviewed by Quest (in Dutch): <a href="https://www.quest.nl/tech/technologie/a46604991/afbeelding-video-vertrouwen-deepfakes/" target="_blank" rel="noopener"">Kunnen we nog wel iets vertrouwen, nu elke video of afbeelding een deepfake kan zijn?</a>
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
               <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[January 2024]</span>
-                  Zeno was featured in Nieuwsuur, on Dutch television, where he speaks about using AI in forensic research (between 02:30 and 03:54): <a href="https://nos.nl/nieuwsuur/video/2503891-deskundigen-verbaasd-over-gebruik-ai-technieken-door-politie" target="_blank" rel="noopener"">Deskundigen verbaasd over gebruik AI-technieken door politie</a>.
+                  Zeno was featured in Nieuwsuur, on Dutch television, where he speaks about using AI in forensic research (between 02:30 and 03:54): <a href="https://www.quest.nl/tech/technologie/a46604991/afbeelding-video-vertrouwen-deepfakes/" target="_blank" rel="noopener"">Deskundigen verbaasd over gebruik AI-technieken door politie</a>.
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
@@ -85,6 +85,13 @@
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[October 2023]</span>
                   Conor won the best poster award at the <a href="https://doi.org/10.1177/14738716241238476" target="_blank" rel="noopener"">annual CLHC symposium</a>.
+                </p>
+              </li>
+              <!-------------------------------------------------------------------------------------------->
+              <li>
+                <p class="text-small-margin">
+                  <span style="color: #1b7677;">[October 2023]</span>
+                  Marcel was interviewed by RTL (in Dutch): <a href="https://www.rtl.nl/economie/artikel/5412068/deepfakes-nepvideos-kunstmatige-intelligentie-ai?redirect=rtlnieuws" target="_blank" rel="noopener"">Problemen met deepfakes: 4 vragen en antwoorden</a>
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
