--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[January 2024]</span>
-                  Zeno was featured in Nieuwsuur, on Dutch television, where he speaks about using AI in forensic research (between 02:30 and 03:54): <a href="https://www.quest.nl/tech/technologie/a46604991/afbeelding-video-vertrouwen-deepfakes/" target="_blank" rel="noopener"">Deskundigen verbaasd over gebruik AI-technieken door politie</a>.
+                  Zeno was featured on Nieuwsuur, on Dutch television, where he speaks about using AI in forensic research (between 02:30 and 03:54): <a href="https://www.quest.nl/tech/technologie/a46604991/afbeelding-video-vertrouwen-deepfakes/" target="_blank" rel="noopener"">Deskundigen verbaasd over gebruik AI-technieken door politie</a>.
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
