--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[May 2024]</span>
-                  Zeno was interviewed by Algemeen Dagblad (in Dutch): <a href="https://www.ad.nl/tech/deepfakes-verschijnen-overal-op-het-internet-6-tips-om-jezelf-te-beschermen-tegen-misleiding~a33f9946/243078522/" target="_blank" rel="noopener"">Deepfakes verschijnen overal op het internet: 6 tips om jezelf te beschermen tegen misleiding</a>.
+                  <a href="https://www.ad.nl/tech/deepfakes-verschijnen-overal-op-het-internet-6-tips-om-jezelf-te-beschermen-tegen-misleiding~a33f9946/243078522/" target="_blank" rel="noopener"">"Deepfakes are omnipresent on the internet: 6 tips that will help you protect yourself from being deceived"</a>: Zeno was interviewed by Algemeen Dagblad (in Dutch).
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
@@ -70,14 +70,42 @@
               <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[February 2024]</span>
-                  Zeno was interviewed by Quest (in Dutch): <a href="https://www.quest.nl/tech/technologie/a46604991/afbeelding-video-vertrouwen-deepfakes/" target="_blank" rel="noopener"">Kunnen we nog wel iets vertrouwen, nu elke video of afbeelding een deepfake kan zijn?</a>
+                  Elina finished an eight-week research visit to Brno University, during which she intensified her collaboration with the <a href="https://speech.fit.vutbr.cz/" target="_blank" rel="noopener"">Speech@FIT group</a>, one of the most renowned speech processing research groups in the world.
+                </p>
+              </li>
+              <!-------------------------------------------------------------------------------------------->
+              <li>
+                <p class="text-small-margin">
+                  <span style="color: #1b7677;">[February 2024]</span>
+                  Andrea successfully defended her PhD thesis entitled <a href="https://hdl.handle.net/11245.1/d7221704-5000-4799-97c6-2fe711f49ddf" target="_blank" rel="noopener""> Face comparison in forensics: A deep dive into deep learning and likelihood rations</a>. 
+                </p>
+              </li>              
+              <!-------------------------------------------------------------------------------------------->
+              <li>
+                <p class="text-small-margin">
+                  <span style="color: #1b7677;">[February 2024]</span>
+                  <a href="https://www.quest.nl/tech/technologie/a46604991/afbeelding-video-vertrouwen-deepfakes/" target="_blank" rel="noopener"">"Can we trust anything, now that every video or image could be a deepfake?"</a>: Zeno was interviewed by Quest (in Dutch).
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
               <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[January 2024]</span>
-                  Zeno was featured on Nieuwsuur, on Dutch television, where he speaks about using AI in forensic research (between 02:30 and 03:54): <a href="https://www.quest.nl/tech/technologie/a46604991/afbeelding-video-vertrouwen-deepfakes/" target="_blank" rel="noopener"">Deskundigen verbaasd over gebruik AI-technieken door politie</a>.
+                  Zeno was featured on Nieuwsuur, on Dutch television, where he spoke about using AI in forensic research (between 02:30 and 03:54): <a href="https://www.quest.nl/tech/technologie/a46604991/afbeelding-video-vertrouwen-deepfakes/" target="_blank" rel="noopener"">"Experts are surprised at the use of AI techniques by the police"</a>.
+                </p>
+              </li>
+              <!-------------------------------------------------------------------------------------------->
+              <li>
+                <p class="text-small-margin">
+                  <span style="color: #1b7677;">[November 2023]</span>
+                  Marcel, Zeno, Merel, Conor and Gonçalo presented at DEX-XL, the annual conference organized by the larger law enforcement departments in the Netherlands.
+                </p>
+              </li>
+              <!-------------------------------------------------------------------------------------------->
+              <li>
+                <p class="text-small-margin">
+                  <span style="color: #1b7677;">[October 2023]</span>
+                  Meike presented her work at the <a href="https://iafs2023.com.au/draft-clone/" target="_blank" rel="noopener"">Triennial Meeting of the International Association of Forensic Sciences</a> in Sydney.
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
