--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[February 2024]</span>
-                  <a href="https://www.quest.nl/tech/technologie/a46604991/afbeelding-video-vertrouwen-deepfakes/" target="_blank" rel="noopener"">"Can we trust anything, now that every video or image could be a deepfake?"</a>: Zeno was interviewed by Quest (in Dutch).
+                  <a href="https://www.quest.nl/tech/technologie/a46604991/afbeelding-video-vertrouwen-deepfakes/" target="_blank" rel="noopener"">"Can we still trust anything, now that every video or image could be a deepfake?"</a>: Zeno was interviewed by Quest (in Dutch).
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
