change translated sentences

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[May 2024]</span>
-                  <a href="https://www.ad.nl/tech/deepfakes-verschijnen-overal-op-het-internet-6-tips-om-jezelf-te-beschermen-tegen-misleiding~a33f9946/243078522/" target="_blank" rel="noopener"">"Deepfakes are omnipresent on the internet: 6 tips that will help you protect yourself from being deceived"</a>: Zeno was interviewed by Algemeen Dagblad (in Dutch).
+                  <a href="https://www.ad.nl/tech/deepfakes-verschijnen-overal-op-het-internet-6-tips-om-jezelf-te-beschermen-tegen-misleiding~a33f9946/243078522/" target="_blank" rel="noopener"">"Deepfakes are everywhere on the internet: 6 tips to protect yourself against deception"</a>: Zeno was interviewed by Algemeen Dagblad (in Dutch).
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
@@ -119,7 +119,7 @@
               <li>
                 <p class="text-small-margin">
                   <span style="color: #1b7677;">[October 2023]</span>
-                  Marcel was interviewed by RTL (in Dutch): <a href="https://www.rtl.nl/economie/artikel/5412068/deepfakes-nepvideos-kunstmatige-intelligentie-ai?redirect=rtlnieuws" target="_blank" rel="noopener"">Problemen met deepfakes: 4 vragen en antwoorden</a>
+                  Marcel was interviewed by RTL (in Dutch): <a href="https://www.rtl.nl/economie/artikel/5412068/deepfakes-nepvideos-kunstmatige-intelligentie-ai?redirect=rtlnieuws" target="_blank" rel="noopener"">"Problems with deepfakes: 4 questions and answers"</a>
                 </p>
               </li>
               <!-------------------------------------------------------------------------------------------->
