--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <div>&nbsp;</div>
             <div>&nbsp;</div>
           </div>
-              <!-------------------------------------------------------------------------------------------->
+          <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
             <img src="img/people/goncalo.jpg">
             <h3>Gonçalo Marcelino</h3>
@@ -282,6 +282,19 @@
             </div>
             <div>&nbsp;</div>
           </div>
+          <!-------------------------------------------------------------------------------------------->
+          <div class="flex-column">
+            <img src="img/people/romke.png">
+            <h3>Romke van Dijk</h3>
+            <div>PhD student</div>
+            <div>
+              <a href="https://www.linkedin.com/in/romke-van-dijk-ab12b41a/" target="_blank" rel="noopener">LinkedIn</a>
+                &nbsp; |&nbsp;
+              <a href="https://github.com/zyronix">Github</a>
+            </div>
+            <div>&nbsp;</div>
+          </div>
+              
 
           <!-------------------------------------------------------------------------------------------->
           <!--Use the following commented block code to add a team member-->
