team members updates

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="flex-item flex-column">
             <h2 class="add-top-margin-small">AI4Forensics @ UvA Informatics Institute, Amsterdam</h2>
             <p class="text">
-              The AI4Forensics Lab is a collaborative initiative of the <a href="http://www.nfi.nl/ target="_blank" rel="noopener"" >Netherlands Forensic Institute </a> and the <a href="https://www.uva.nl/" target="_blank" rel="noopener"> University of Amsterdam </a>. Our focus is on the study and development of artificial intelligence for forensic purposes.
+              The AI4Forensics Lab is a collaborative initiative of the <a href="http://www.nfi.nl/ target="_blank" rel="noopener" style="color: white;" >Netherlands Forensic Institute </a> and the <a href="https://www.uva.nl/" target="_blank" rel="noopener" style="color: white;"> University of Amsterdam </a>. Our focus is on the study and development of artificial intelligence for forensic purposes.
             </p>
           </div>
         </div>
@@ -217,16 +217,16 @@
           </div> 
           <!-------------------------------------------------------------------------------------------->
           <div class="flex-column">
-            <img src="img/people/merel.jpeg">
-            <h3>Merel de Leeuw den Bouter</h3>
+            <img src="img/people/ivona.jpg">
+            <h3>Ivona Najdenkoska</h3>
             </a>
             <div>Postdoc</div>
             <div>
-              <a href="https://scholar.google.com/citations?hl=nl&user=OK2uC1sAAAAJ" target="_blank" rel="noopener">Scholar</a>
+              <a href="https://ivonajdenkoska.github.io/" target="_blank" rel="noopener">Website</a> 
+              &nbsp;| &nbsp;
+              <a href="https://scholar.google.com/citations?user=2rFidrcAAAAJ&hl=en" target="_blank" rel="noopener">Scholar</a>
               &nbsp;|&nbsp;
-              <a href="https://nl.linkedin.com/in/mereldldb" target="_blank" rel="noopener">LinkedIn</a>
-              &nbsp;<!--| &nbsp;
-              <a href="https://github.com/mereldldb2" target="_blank" rel="noopener">Github</a> -->
+              <a href="https://www.linkedin.com/in/ivona-najdenkoska/" target="_blank" rel="noopener">LinkedIn</a>
             </div>
             <div>&nbsp;</div>
           </div> 
@@ -301,6 +301,18 @@
             </div>
             <div>&nbsp;</div>
           </div>
+          <!-------------------------------------------------------------------------------------------->
+          <div class="flex-column">
+            <img src="img/people/stijn.jpg">
+            <h3>Stijn van Lierop</h3>
+            <div>PhD student</div>
+            <div>
+              <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=5c_DAmQAAAAJ" target="_blank" rel="noopener">Scholar</a>
+                &nbsp; |&nbsp;
+              <a href="https://github.com/StijnvLierop">Github</a>
+            </div>
+            <div>&nbsp;</div>
+          </div>
               
 
           <!-------------------------------------------------------------------------------------------->
@@ -358,8 +370,21 @@
             </div>
             <div>&nbsp;</div>
           </div> 
-
-  
+          <!-------------------------------------------------------------------------------------------->
+          <div class="flex-column">
+            <img src="img/people/merel.jpeg">
+            <h3>Merel de Leeuw den Bouter</h3>
+            </a>
+            <div>Former Postdoc</div>
+            <div>
+              <a href="https://scholar.google.com/citations?hl=nl&user=OK2uC1sAAAAJ" target="_blank" rel="noopener">Scholar</a>
+              &nbsp;|&nbsp;
+              <a href="https://nl.linkedin.com/in/mereldldb" target="_blank" rel="noopener">LinkedIn</a>
+              &nbsp;<!--| &nbsp;
+              <a href="https://github.com/mereldldb2" target="_blank" rel="noopener">Github</a> -->
+            </div>
+            <div>&nbsp;</div>
+          </div> 
       </div>
     </div>
   
