--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
             <ul>
               <li>
                 <p class="text-small-margin">
+                  <span style="color: #1b7677;">[Feb 2025]</span>
+                  Zeno was interviewed at the AAFS Conference: <a href="https://youtu.be/bXcjT4lwEcY?si=7gdlel1KBiU2QyML" target="_blank" rel="noopener"">Today on AAFS TV</a>.
+                </p>
+              </li>
+              <li>
+                <p class="text-small-margin">
                   <span style="color: #1b7677;">[June 2024]</span>
                   Zeno was interviewed for EenVandaag (in Dutch): <a href="https://eenvandaag.avrotros.nl/item/hoe-herken-je-deepfake-videos-als-je-op-deze-8-dingen-let-kom-je-een-heel-eind/#alert-toaster-slide-down" target="_blank" rel="noopener"">"How can you recognize a deepfake? These 8 clues can help you"</a>.
                 </p>
@@ -220,7 +226,7 @@
             <img src="img/people/ivona.jpg">
             <h3>Ivona Najdenkoska</h3>
             </a>
-            <div>Postdoc</div>
+            <div>Postdoctoral Researcher</div>
             <div>
               <a href="https://ivonajdenkoska.github.io/" target="_blank" rel="noopener">Website</a> 
               &nbsp;| &nbsp;
@@ -375,7 +381,7 @@
             <img src="img/people/merel.jpeg">
             <h3>Merel de Leeuw den Bouter</h3>
             </a>
-            <div>Former Postdoc</div>
+            <div>Former Postdoctoral Researcher</div>
             <div>
               <a href="https://scholar.google.com/citations?hl=nl&user=OK2uC1sAAAAJ" target="_blank" rel="noopener">Scholar</a>
               &nbsp;|&nbsp;
