new member added

--- a/index.html
+++ b/index.html
@@ -319,7 +319,18 @@
             </div>
             <div>&nbsp;</div>
           </div>
-              
+          <!-------------------------------------------------------------------------------------------->
+          <div class="flex-column">
+            <img src="img/people/david.jpg">
+            <h3>David Coslar</h3>
+            <div>PhD student</div>
+            <div>
+              <a href="https://nl.linkedin.com/in/david-coslar-376454194" target="_blank" rel="noopener">Linkedin</a>
+                &nbsp; |&nbsp;
+              <a href="https://github.com/DCoslar/">Github</a>
+            </div>
+            <div>&nbsp;</div>
+          </div>
 
           <!-------------------------------------------------------------------------------------------->
           <!--Use the following commented block code to add a team member-->
